src/test/ui/parser/not-a-pred.stderr
error: expected one of `->`, `;`, `where`, or `{`, found `:`
  --> $DIR/not-a-pred.rs:1:26
   |
LL | fn f(a: isize, b: isize) : lt(a, b) { }
   |                          ^ expected one of `->`, `;`, `where`, or `{`

error: aborting due to previous error

